--- a/frontend/src/app/components/station-list/station-list.page.html
+++ b/frontend/src/app/components/station-list/station-list.page.html
@@ -1,12 +1,20 @@
+<!-- insertar aqui menu heypey-->
+
+
 <ion-header>
   <ion-toolbar>
+    <!--<ion-buttons slot="start">
+      <ion-button color="primary" (click)="openMenu()">
+        <ion-icon slot="icon-only" name="menu"></ion-icon>
+      </ion-button>
+    </ion-buttons>-->
     <ion-title>Lista de Estaciones</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="limiter">
-    <div class="container-login100">
+    <div style="background: url('/assets/img/background2.png')" class="container-login100">
       <div class="wrap-login100 p-l-20 p-r-20 p-t-20 p-b-20">
         <br>
         <!--Titol principal-->
