--- a/frontend/src/app/components/add-bike/add-bike.component.html
+++ b/frontend/src/app/components/add-bike/add-bike.component.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div class="limiter">
-    <div class="container-login100">
+    <div style="background: url('/assets/img/background2.png')" class="container-login100">
       <div class="wrap-login100 p-l-15 p-r-15 p-t-15 p-b-15">
         <form class="login100-form validate-form">
           <span class="login100-form-title p-b-49">
