--- a/frontend/src/app/components/bike-list/bike-list.page.html
+++ b/frontend/src/app/components/bike-list/bike-list.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <div class="limiter">
-    <div class="container-login100">
+    <div style="background: url('/assets/img/background2.png')" class="container-login100">
       <div class="wrap-login100 p-l-20 p-r-20 p-t-20 p-b-20">
         <br>
         <!--Titol principal-->
