--- a/frontend/src/app/components/station-detail/station-detail.component.html
+++ b/frontend/src/app/components/station-detail/station-detail.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Station Detail</ion-title>
+    <ion-title style="padding-left:20px">Station Detail</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="station-list"></ion-back-button>
     </ion-buttons>
