--- a/frontend/src/app/components/station-list/station-list.page.html
+++ b/frontend/src/app/components/station-list/station-list.page.html
@@ -3,23 +3,21 @@
 
 <ion-header>
   <ion-toolbar>
-    <!--<ion-buttons slot="start">
-      <ion-button color="primary" (click)="openMenu()">
-        <ion-icon slot="icon-only" name="menu"></ion-icon>
-      </ion-button>
-    </ion-buttons>-->
-    <ion-title>Lista de Estaciones</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title style="padding-left:20px">Station List</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="limiter">
-    <div style="background: url('/assets/img/background2.png')" class="container-login100">
-      <div class="wrap-login100 p-l-20 p-r-20 p-t-20 p-b-20">
+    <div style="background: url('/assets/img/background4.png')" class="container-login100">
+      <div style="background: url('/assets/img/background2.png')" class="wrap-login100 p-l-20 p-r-20 p-t-20 p-b-20">
         <br>
         <!--Titol principal-->
         <span class="login100-form-title">
-		Lista de Estaciones
+		Station List
         </span>
         <br>
         <ion-searchbar
@@ -29,19 +27,19 @@
         <br>
         <!--Si la variable llista es diferent a Null, mostrem els titols de les columnes-->
         <ion-list-header *ngIf="llista" >
-          <ion-label>Nombre</ion-label>
-          <ion-label>Estado</ion-label>
-          <ion-label>Descripción</ion-label>
+          <ion-label>Name</ion-label>
+          <ion-label>State</ion-label>
+          <ion-label>Description</ion-label>
           <ion-label></ion-label>
           <ion-label></ion-label>
         </ion-list-header>
-        <ion-list *ngFor="let element of llista">
+        <ion-list *ngFor="let element of llista" style="background: url('/assets/img/background2.png')">
           <ion-item>
             <ion-label>{{element.name}}</ion-label>
             <ion-label>{{element.state}}</ion-label>
             <ion-label>{{element.description}}</ion-label>
-            <ion-button class="list-buttons" color="primary" (click)="botoLlista(element._id, element.name)" >
-              <ion-label style="padding-left:7px">Obtener más Información</ion-label>
+            <ion-button class="list-buttons" shape="round" expand="full" color="dark" (click)="botoLlista(element._id, element.name)" >
+              <ion-label style="padding-left:7px; padding-right:3px"></ion-label>
               <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
             </ion-button>
           </ion-item>
@@ -50,17 +48,19 @@
         <div class="container-login100-form-btn">
           <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
-            <ion-button color="primary" (click)="order()"  expand="block">Order Alphabetically Stations</ion-button>
+            <ion-button icon-left size="medium" expand="full" shape="round" color="dark"  (click)="order()" tappable>
+              <ion-icon size="large" ios="ios-reorder" md="md-reorder"></ion-icon>
+              Alphabetically Order
+            </ion-button>
           </div>
         </div>
       </div>
     </div>
-    <ion-fab vertical="bottom" horizontal="center" slot="fixed" (click)="refresh()">
-      <ion-fab-button>
+    <ion-fab vertical="top" horizontal="left" slot="fixed" (click)="refresh()">
+      <ion-fab-button color="dark">
         <ion-icon name="refresh-circle"></ion-icon>
       </ion-fab-button>
     </ion-fab>
-
     <!--===============================================================================================-->
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
