Measurements & Resistances lists / modules / componets / etc ADDED

--- a/frontend/src/app/components/add-measurement/add-measurement.component.html
+++ b/frontend/src/app/components/add-measurement/add-measurement.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title style="padding-left:20px">Add New Bike</ion-title>
+    <ion-title style="padding-left:20px">Add Measurement</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,7 +13,7 @@
       <div style="background: url('/assets/img/background2.png')" class="wrap-login100 p-l-15 p-r-15 p-t-15 p-b-15">
         <form class="login100-form validate-form">
           <span class="login100-form-title p-b-49">
-            Add unassigned bike
+            Add an empty measurement
           </span>
           <form [formGroup]="Form">
             <ion-list>
@@ -24,13 +24,8 @@
               </ion-item>
               <ion-item>
                 <ion-icon name="add" item-start></ion-icon>
-                <ion-label stacked>Kms:</ion-label>
-                <ion-input formControlName="kms" type="number" placeholder="Kms"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-icon name="add" item-start></ion-icon>
                 <ion-label stacked>Description:</ion-label>
-                <ion-input formControlName="description" type="text" placeholder="Description"></ion-input>
+                <ion-input formControlName="description" type="text" placeholder="description"></ion-input>
               </ion-item>
             </ion-list>
           </form>
@@ -38,21 +33,18 @@
           <div class="container-login100-form-btn">
             <div class="wrap-login100-form-btn">
               <div class="login100-form-bgbtn"></div>
-              <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="addBike()"
+              <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="addMeasurement()"
                           [disabled]="Form.invalid"  [style.backgroundColor]="enable ? '#00CC00' : '#FF0000'">
                 <ion-icon  style="padding-right:15px" size="large" ios="ios-add-circle" md="md-add-circle"></ion-icon>
-                Add New Bike
+                   Add Measurement
               </ion-button>
-            </div>
+             </div>
           </div>
         </form>
         <br>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.form">
             <div class="alert alert-danger" *ngIf="Form.get('name').hasError(validation.type) && (Form.get('name').dirty || Form.get('name').touched)">
-              <ion-label color="danger">{{validation.message}}</ion-label>
-            </div>
-            <div class="alert alert-danger" *ngIf="Form.get('kms').hasError(validation.type) && (Form.get('kms').dirty || Form.get('kms').touched)">
               <ion-label color="danger">{{validation.message}}</ion-label>
             </div>
             <div class="alert alert-danger" *ngIf="Form.get('description').hasError(validation.type) && (Form.get('description').dirty || Form.get('description').touched)">
@@ -64,5 +56,4 @@
     </div>
   </div>
 </ion-content>
-
 
