--- a/frontend/src/app/components/measurement-list/measurement-list.page.html
+++ b/frontend/src/app/components/measurement-list/measurement-list.page.html
@@ -6,7 +6,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title style="padding-left:20px">Station List</ion-title>
+    <ion-title style="padding-left:20px">Measurement List</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -17,7 +17,7 @@
         <br>
         <!--Titol principal-->
         <span class="login100-form-title">
-		Station List
+		Measurement List
         </span>
         <br>
         <ion-searchbar
