Assign resistances to measurements OK

--- a/frontend/src/app/components/measurement-detail/measurement-detail.component.html
+++ b/frontend/src/app/components/measurement-detail/measurement-detail.component.html
@@ -14,7 +14,7 @@
         <br>
         <!--Titol principal-->
         <span class="login100-form-title">
-          "{{measurementName}}" Current Bikes:
+          "{{measurementName}}" Current Resistances:
         </span>
         <br>
         <ion-list-header *ngIf="resistancesMeasurement" >
@@ -43,7 +43,7 @@
         <br>
         <br>
         <span class="login100-form-title">
-          Bikes ready to assign:
+          Resistances ready to assign:
         </span>
         <br>
         <ion-list-header *ngIf="unnasignedResistances" >
