--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,24 +1,97 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu>
-      <ion-header>
-        <ion-toolbar>
+  <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <ion-menu side="start" menuId="first" contentId="main">
+
+    <!-- Header del menu -->
+    <ion-header>
+      <ion-toolbar>
+        <ion-item>
           <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
-  </ion-split-pane>
+        </ion-item>
+      </ion-toolbar>
+    </ion-header>
+
+    <!-- Contenido del menu -->
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
+            <ion-icon slot="start" [name]="p.icon"></ion-icon>
+            <ion-label>
+              {{p.title}}
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+
+  </ion-menu>
+
+  <ion-menu side="start" menuId="custom" contentId="main" class="my-custom-menu">
+
+    <!-- Header del menu -->
+    <ion-header>
+      <ion-toolbar>
+        <ion-item>
+          <ion-title>Menu</ion-title>
+        </ion-item>
+      </ion-toolbar>
+    </ion-header>
+
+    <!-- Contenido del menu -->
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
+            <ion-icon slot="start" [name]="p.icon"></ion-icon>
+            <ion-label>
+              {{p.title}}
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+
+  </ion-menu>
+
+  <ion-menu side="end" type="push" contentId="main">
+
+    <!-- Header del menu -->
+    <ion-header>
+      <ion-toolbar>
+        <ion-item>
+          <ion-title>Menu</ion-title>
+        </ion-item>
+      </ion-toolbar>
+    </ion-header>
+
+    <!-- Contenido del menu -->
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
+            <ion-icon slot="start" [name]="p.icon"></ion-icon>
+            <ion-label>
+              {{p.title}}
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
+
+
+  <ion-router-outlet></ion-router-outlet>
 </ion-app>
