calculate time of measurements layout functional

--- a/frontend/src/app/components/calculate-time/calculate-time.component.html
+++ b/frontend/src/app/components/calculate-time/calculate-time.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title style="padding-left:20px">Add New Resistance</ion-title>
+    <ion-title style="padding-left:20px">Calculate time of measurements</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,24 +13,24 @@
       <div style="background: url('/assets/img/background2.png')" class="wrap-login100 p-l-15 p-r-15 p-t-15 p-b-15">
         <form class="login100-form validate-form">
           <span class="login100-form-title p-b-49">
-            Add unassigned resistance
+            Calculate time of the measurements
           </span>
           <form [formGroup]="Form">
             <ion-list>
               <ion-item>
                 <ion-icon name="add" item-start></ion-icon>
-                <ion-label stacked>Name:</ion-label>
-                <ion-input formControlName="name" type="text" placeholder="Name"></ion-input>
+                <ion-label stacked>Number of rows:</ion-label>
+                <ion-input formControlName="measRow" type="number" min="0" max="200" placeholder="# Rows"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-icon name="add" item-start></ion-icon>
-                <ion-label stacked>Value [kΩ]:</ion-label>
-                <ion-input formControlName="value" type="number" placeholder="Value"></ion-input>
+                <ion-label stacked>Number of columns:</ion-label>
+                <ion-input formControlName="measCol" type="number" min="0" max="1000" placeholder="# Columns"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-icon name="add" item-start></ion-icon>
-                <ion-label stacked>Description:</ion-label>
-                <ion-input formControlName="description" type="text" placeholder="Description"></ion-input>
+                <ion-label stacked>Measurements per second:</ion-label>
+                <ion-input formControlName="measSec" type="number" min="0" placeholder="Meas/sec"></ion-input>
               </ion-item>
             </ion-list>
           </form>
@@ -38,24 +38,28 @@
           <div class="container-login100-form-btn">
             <div class="wrap-login100-form-btn">
               <div class="login100-form-bgbtn"></div>
-              <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="addResistance()"
+              <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="calculateTime()"
                           [disabled]="Form.invalid"  [style.backgroundColor]="enable ? '#00CC00' : '#FF0000'">
                 <ion-icon  style="padding-right:15px" size="large" ios="ios-add-circle" md="md-add-circle"></ion-icon>
-                Add New Resistance
+                Calculate the time for the measurement
               </ion-button>
             </div>
           </div>
+
+
+
         </form>
+
         <br>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.form">
-            <div class="alert alert-danger" *ngIf="Form.get('name').hasError(validation.type) && (Form.get('name').dirty || Form.get('name').touched)">
+            <div class="alert alert-danger" *ngIf="Form.get('measRow').hasError(validation.type) && (Form.get('measRow').dirty || Form.get('measRow').touched)">
               <ion-label color="danger">{{validation.message}}</ion-label>
             </div>
-            <div class="alert alert-danger" *ngIf="Form.get('value').hasError(validation.type) && (Form.get('value').dirty || Form.get('value').touched)">
+            <div class="alert alert-danger" *ngIf="Form.get('measCol').hasError(validation.type) && (Form.get('measCol').dirty || Form.get('measCol').touched)">
               <ion-label color="danger">{{validation.message}}</ion-label>
             </div>
-            <div class="alert alert-danger" *ngIf="Form.get('description').hasError(validation.type) && (Form.get('description').dirty || Form.get('description').touched)">
+            <div class="alert alert-danger" *ngIf="Form.get('measSec').hasError(validation.type) && (Form.get('measSec').dirty || Form.get('measSec').touched)">
               <ion-label color="danger">{{validation.message}}</ion-label>
             </div>
           </ng-container>
