--- a/frontend/src/app/components/resistance-list/resistance-list.page.html
+++ b/frontend/src/app/components/resistance-list/resistance-list.page.html
@@ -24,7 +24,7 @@
         <!--Si la variable llista es diferent a Null, mostrem els titols de les columnes-->
         <ion-list-header *ngIf="llista" >
           <ion-label>.     Resistance</ion-label>
-          <ion-label>   Value</ion-label>
+          <ion-label>   Value [kΩ] </ion-label>
           <ion-label>   Description</ion-label>
           <ion-label>   Assigned</ion-label>
           <ion-label></ion-label>
