--- a/frontend/src/app/components/measurement-detail/measurement-detail.component.html
+++ b/frontend/src/app/components/measurement-detail/measurement-detail.component.html
@@ -19,7 +19,7 @@
         <br>
         <ion-list-header *ngIf="resistancesMeasurement" >
           <ion-label>Resistance</ion-label>
-          <ion-label>Value</ion-label>
+          <ion-label>Value [kΩ]</ion-label>
           <ion-label>Description</ion-label>
           <ion-label></ion-label>
           <ion-label></ion-label>
@@ -48,7 +48,7 @@
         <br>
         <ion-list-header *ngIf="unnasignedResistances" >
           <ion-label>Resistance</ion-label>
-          <ion-label>Value</ion-label>
+          <ion-label>Value [kΩ]</ion-label>
           <ion-label>Description</ion-label>
           <ion-label></ion-label>
           <ion-label></ion-label>
